openshift/tester-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tester
    app.kubernetes.io/component: tester
    app.kubernetes.io/instance: tester
    app.kubernetes.io/name: tester
    app.kubernetes.io/part-of: tester
  name: tester
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: tester
    deployment: tester
  sessionAffinity: None
  type: ClusterIP
