openshift/tester-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tester
    app.kubernetes.io/component: tester
    app.kubernetes.io/instance: tester
    app.kubernetes.io/name: tester
    app.kubernetes.io/part-of: tester
  name: tester
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: tester
    weight: 100
  wildcardPolicy: None
